# cli-base

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: install_base.yaml  publish.yaml  py_test_tests.yaml  tests.yaml
cli_base/: __init__.py
docs/: api.rst  conf.py  index.md
generic_cli_base/: __init__.py
tests/: test_help.py  test_logging_setup.py  test_no_config.py  test_unvalidated_config.py  test_validate_config.py
web_app_cli/: __init__.py
